--- a/intellispace/package.json
+++ b/intellispace/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.5.0",
+    "recharts": "^2.12.1",
     "sweetalert2": "^11.10.5",
     "web-vitals": "^2.1.4"
   },
