--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_BACKEND_URI=https://final-project-backend-2-q9eg.onrender.com
+#  REACT_APP_BACKEND_URI=https://intelispace-ee5a8c267c62.herokuapp.com
