--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "/",
   "dependencies": {
     "@blacklab/react-image-magnify": "^4.1.1",
+    "@firebase/auth": "^1.6.1",
+    "@firebase/storage": "^0.12.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +15,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.8.1",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
